scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -10,15 +10,25 @@
 	padding: 0;
 }
 
+body {
+	height: 100%;
+	width: 100%;
+}
+
 #bg {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
 }
+
+canvas {
+	display: block;
+}
+
 section {
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 
 	position: absolute;
 	top: 0;
